# twelve-cli

./: pyproject.toml
cli/: __init__.py  __main__.py  aws_client.py  cluster.py  ec2.py
cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: cluster-init.sh  issuer.yaml  metric-ui.yml  nginx-ingress-install.sh  registry-ingress.yaml  registry-init.sh  registry-ui-config.yml  registry-ui-pvc.yml  registry-ui.yml  whoami.yaml
config/Jenkins/: Jenkins-Ingress.yaml  Jenkins-Slave.Dockerfile
